Version 1.7-3
------------------------------------------------------------------------------
General:
* Change R-Version dependency to R >= 3.1, due to import of "tidyr" and "haven" packages.
* Improved internal management of imported data via "haven" and "foreign" packages, so users don't need to care of structure and classed of data read with either haven, foreing or sjPlot's read-functions.

New functions:
* "cv" to compute coefficient of variance.

Changes to functions:
* "sjp.glm" now supports plotting "logistf" objects.

Bug fixes:
* Weights with decimals in "sjt.xtab" (e.g. "weightBy = abs(rnorm(100, 2, 1)") caused an error - fixed.


Version 1.7
------------------------------------------------------------------------------
General:
* Renamed sjs, sju, sjd and sji-functions into more intuitiv and shorter function names.
* "autoSetValueLabels" and "autoSetVariableLabels" are now a global option. E.g., use "options(autoSetValueLabels = FALSE)" to turn off automatic value label detection in plotting and table functions, or "options(autoSetValueLabels = TRUE)" to turn on automatic label detection.
* "p_zero" is now a global option. Use "options(p_zero = TRUE)" to show leading zero before period in p-value, r-quared and phi labels.
* "read_spss" is now a global option. Use "options(read_spss = 'haven')" to set default package for readind spss data to haven, or "options(read_spss = 'foreign')" to make "read_spss" use the foreign package to read spss data.
* "value_labels" is now a global option. Use "options(value_labels = 'haven')" to set default attribute assignment in haven format ("labels" and "label"), or "options(value_labels = 'foreign')" to to set default attribute assignment in foreign format ("value.labels" and "variable.label"). Affects functions like auto-detection of labels, "set_var_labels"or "set_val_labels" etc.
* Removed "plyr" import and replaced with "dplyr" functions.
* Removed "reshape2" import and replaced with "tidyr" functions.