@@ -1,7 +1,7 @@
 Version 1.7-3
 ------------------------------------------------------------------------------
 General:
-* Change R-Version dependency to R >= 3.1, due to import of "tidyr" and "haven" packages.
+* Change R-Version dependency to R >= 3.1, due to import of "tidyr" and "dplyr" packages.
 * Improved internal management of imported data via "haven" and "foreign" packages, so users don't need to care of structure and classed of data read with either haven, foreing or sjPlot's read-functions.
 
 New functions:
@@ -9,6 +9,7 @@ New functions:
 
 Changes to functions:
 * "sjp.glm" now supports plotting "logistf" objects.
+* Added further pre-set themes to "sjp.setTheme".
 
 Bug fixes:
 * Weights with decimals in "sjt.xtab" (e.g. "weightBy = abs(rnorm(100, 2, 1)") caused an error - fixed.
